--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ zhihu_username:     can-que-huo-ji-yi
 github_username:    lihuaichen
 #facebook_username:  carson
 #jianshu_username:   e71990ada2fd
-twitter_username:   @lihuaichen
+#twitter_username:   @lihuaichen
 
 
 
