--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 希曼博客
+title: XIMAN BLOG
 SEOTitle: 希曼博客 | Carson的学习记录与分享
 header-img: img/post-bg-desk.jpg
 email: lihuaichen1995@163.com
@@ -23,7 +23,7 @@ zhihu_username:     can-que-huo-ji-yi
 github_username:    lihuaichen
 #facebook_username:  carson
 #jianshu_username:   e71990ada2fd
-twitter_username:    lihuaichen
+twitter_username:   lihuaichen
 
 
 
