--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: XIMAN BLOG
+title: 希曼 BLOG
 SEOTitle: 希曼博客 | Carson的学习记录与分享
 header-img: img/post-bg-desk.jpg
 email: lihuaichen1995@163.com
